clean up
git-svn-id: https://svnserver.informatik.kit.edu/i43/svn/descartes/code/qpme/private/skounev/projects/qpme/eclipse-src/trunk@114 9e42b895-fcda-4063-8a3b-11be15eb1bbd